fix: update carousel visibility handling and adjust variable width setting

--- a/css/index.css
+++ b/css/index.css
@@ -10,7 +10,9 @@
 html {
   overflow-y: scroll;
 }
-
+body.hidden {
+  visibility: hidden;
+}
 body.modal-open {
   padding-right: 0 !important;
 }
@@ -420,13 +422,19 @@ body {
 
 /* Carousel Styles */
 .slick-carousel {
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.01s ease-in-out;
   width: 90%;
   margin-left: auto;
   margin-right: auto;
   display: flex;
   justify-content: center;
 }
-
+.slick-initialized {
+  visibility: visible;
+  opacity: 1;
+}
 .main-carousel-container {
   margin-top: 90px;
 }
